--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "homepage": "https://Fransisca-somto.github.io/cgpa-calculator",
   "dependencies": {
     "cra-template": "1.2.0",
+    "gh-pages": "^6.2.0",
     "html2canvas": "^1.4.1",
     "html2img": "^0.0.1",
     "html2pdf": "^0.0.11",
+    "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -16,6 +18,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
